# autoware_tcl_interfaces

autoware_tcl_interface/include/autoware_tcl_interface/: autoware_tcl_interface.hpp  autoware_tcl_interface_backup.hpp
autoware_tcl_msgs/: CMakeLists.txt  package.xml
autoware_tcl_msgs/msg/: CompressedImage.msg  Image.msg  Odometry.msg  PointCloud2.msg  PoseWithCovarianceStamped.msg  TwistWithCovarianceStamped.msg  VelocityReport.msg
